--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset='utf-8'>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>quest</title>
-  </head>
-  <body>
-    <noscript>
-      quest is a JavaScript app. Please enable JavaScript to continue.
-    </noscript>
-    <div id="app"></div>
-    <script src="/js/compiled/app.js"></script>
-  </body>
+
+<head>
+  <meta charset='utf-8'>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>quest</title>
+  <link rel="stylesheet" type="text/css" href="css/bulma.min.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+</head>
+
+<body>
+  <noscript>
+    quest is a JavaScript app. Please enable JavaScript to continue.
+  </noscript>
+  <div id="app"></div>
+  <script src="/js/compiled/app.js"></script>
+</body>
+
 </html>
