--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -14,7 +14,7 @@
     quest is a JavaScript app. Please enable JavaScript to continue.
   </noscript>
   <div id="app"></div>
-  <script src="/js/compiled/app.js"></script>
+  <script src="/js/compiled/main.js"></script>
 </body>
 
 </html>
